# VeriQC

./: .gitignore  README.md
project/linux/: CMakeLists.txt  Readme.txt  VeriQC.pro  build.sh  default.desktop  deploy.sh
project/linux/SubPro/: AutoUpgradePlug.pro  VeriQC_UI.pro
project/windows/: AutoUpgradePlug.vcxproj  AutoUpgradePlug.vcxproj.filters  VeriQC_UI.sln  VeriQC_UI.vcxproj  VeriQC_UI.vcxproj.filters
src/UpgradePlug/: AutoUpgradePlug.pri  AutoUpgradePlug.qrc  ButtonHoverWatcher.cpp  ButtonHoverWatcher.h  HttpClient.cpp  HttpClient.h  TitleBarCloseButton.qss  TitleBarMinButton.qss  TitleBarNormalButton.qss  Translation_Upgrade_zh.qm  Translation_Upgrade_zh.ts  UpgradeMainWindow.cpp  UpgradeMainWindow.h  framelesswindow.cpp  framelesswindow.h  main.cpp
src/UpgradePlug/zip/: CZipExtractor.cpp  CZipExtractor.h
src/VeriQC/: VeriQC.vcxproj  VeriQC.vcxproj.filters
src/VeriQC/src/: Entrance.c  VeriQC.h
src/VeriQC/src/Common/: CommonFuncs.h  Coordinate.c  Coordinate.h  DataTypes.h  GNSSConstants.h  MatrixFuncs.c  MatrixFuncs.h  Memory.c  Memory.h  TimeDefines.h  TimeFuncs.c
src/VeriQC/src/Interface/: MsgConvertTransQC.c  MsgConvertTransQC.h  PrintFunc.c  PrintFunc.h  QCCommon.c  QCCommon.h  QCProcessor.c  (+3 more)
src/VeriQC_UI/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AppSettingsManagement.cpp  AppSettingsManagement.h  CommandLineProcessor.cpp  CommandLineProcessor.h  ExpandButtonDelegate.cpp  ExpandButtonDelegate.h  ImportFileDialog.cpp  ImportFileDialog.h  ImportFileDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ObsTimePlot.cpp  ObsTimePlot.h  ObsTimePlotDialog.cpp  ObsTimePlotDialog.h  ObsTimePlotDialog.ui  PlotTimeAxisTicker.cpp  PlotTimeAxisTicker.h  QCConfigDialog.cpp  QCConfigDialog.h  QCConfigDialog.ui  QCConfigurator.cpp  QCConfigurator.h  QCObject.cpp  QCObject.h  QCObjectManager.cpp  QCObjectManager.h  QCObjectTableModel.cpp  QCObjectTableModel.h  QCProcessThread.cpp  QCProcessThread.h  QCProcessor.cpp  QCProcessor.h  QCProgressDialog.cpp  QCProgressDialog.h  QCProgressDialog.ui  (+45 more)
src/VeriQC_UI/Components/: MyAlertMessageBox.cpp  MyAlertMessageBox.h  MyComboBox.cpp  MyComboBox.h  MyDateTimeEdit.cpp  MyDateTimeEdit.h  MyDialog.cpp  MyDialog.h  MyHeaderView.cpp  MyHeaderView.h  MyMenu.cpp  MyMenu.h  MyMessageBox.cpp  MyMessageBox.h  MyNoWheelDoubleSpinBox.cpp  MyNoWheelDoubleSpinBox.h  MyNoWheelSpinBox.cpp  MyNoWheelSpinBox.h  MyProgressCustomPlot.cpp  MyProgressCustomPlot.h  MyWaterProgressBar.cpp  MyWaterProgressBar.h
src/VeriQC_UI/QCustomplot/: qcustomplot.cpp  qcustomplot.h
src/VeriQC_UI/Resources/: template.html
src/VeriQC_UI/upgrade/: CNewVersionDescDialog.cpp  CNewVersionDescDialog.h  CNewVersionDescDialog.ui  HttpClient.cpp  HttpClient.h  UpgradeDTO.h  UpgradeHelp.cpp  UpgradeHelp.h
(+104 files in other folders)
